# namexif

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pydocstyle  CHANGELOG.rst  Cargo.toml  LICENSE.txt  MANIFEST.in  README.md  README.rst  build.rs  deny.toml  doc8.ini  justfile  setup.py  tox.ini
.cargo/: audit.toml
.github/workflows/: ci.yml  cloud_storage.yml  continuous-integration.yml  continuous_integration.yml  security_audit.yml
src/: app.rs  cli.rs  image.rs  imgfile.rs  main.rs  rename.rs  settings.rs  ui.rs  utils.rs
src/namexif/: __about__.py  __init__.py  __main__.py  app.py  imgfile.py
