[package]
name = "namexif"
version = "0.1.0"
edition = "2021"
description = "Rename photos according to their EXIF date tag."
repository = "https://github.com/vivienm/namexif"
license = "MIT"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.9.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
clap_complete = "4.5.6"
derive_more = "0.99.18"
kamadak-exif = "0.5.5"
log = "0.4.22"
rayon = "1.10.0"
simplelog = "0.12.2"

[build-dependencies]
chrono-tz = "0.9.0"
log = "0.4.22"
